JBTM-3590 removed handling for Sun ORB and move to OpenJDK ORB