@@ -306,110 +306,6 @@
       </build>
     </profile>
     <profile>
-      <id>jts-idlj</id>
-      <activation>
-        <property>
-          <name>!idlj-disabled</name>
-        </property>
-      </activation>
-
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl</artifactId>
-          <version>${project.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl-tests</artifactId>
-          <version>${project.version}</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>idlj-compile</id>
-                <goals>
-                  <goal>compile</goal>
-                </goals>
-                <configuration>
-                  <excludes>
-                    <exclude>**/jacorb/**</exclude>
-                    <exclude>**/ibmorb/**</exclude>
-                  </excludes>
-                </configuration>
-              </execution>
-              <execution>
-                <id>idlj-testCompile</id>
-                <goals>
-                  <goal>testCompile</goal>
-                </goals>
-                <configuration>
-                  <testExcludes>
-				    <!-- TODO make sure all supported ORBs have "RecoveryCreator" tests -->
-                    <exclude>**/GenericRecoveryCreatorUnitTest.java</exclude>
-                    <exclude>**/JacORB*.java</exclude>
-                    <exclude>**/jacorb/**</exclude>
-                    <exclude>**/ibmorb/**</exclude>
-                  </testExcludes>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>surefire-idlj</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <systemProperties combine.children="append" />
-                  <excludes>
-                    <exclude>**/common/**</exclude>
-                    <exclude>**/exceptions/**</exclude>
-                    <exclude>**/orbspecific/resources/**</exclude>
-                    <exclude>**/resources/**</exclude>
-                    <exclude>**/utils/ResourceTrace.java</exclude>
-                    <exclude>**/utils/Util.java</exclude>
-                    <exclude>**/TransactionTest2.java</exclude>
-                    <exclude>**/CheckedTransactions.java</exclude>
-                    <exclude>**/GridTest.java</exclude>
-                    <exclude>**/remote/**</exclude>
-                    <exclude>**/DefaultTimeout.java</exclude>
-                    <exclude>**/JacORB*.java</exclude>
-                    <exclude>**/jacorb/**</exclude>
-                    <exclude>**/ibmorb/**</exclude>
-                  </excludes>
-                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true</argLine>
-                  <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
-                  <classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
-					<classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
-					<classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
-                  </classpathDependencyExcludes>
-                  <systemPropertyVariables combine.children="append">
-                    <OrbPortabilityEnvironmentBean.orbImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.orb.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.orbImpleClassName>
-                    <OrbPortabilityEnvironmentBean.poaImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.oa.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.poaImpleClassName>
-                    <OrbPortabilityEnvironmentBean.orbDataClassName>com.arjuna.orbportability.internal.orbspecific.versions.javaidl_1_4</OrbPortabilityEnvironmentBean.orbDataClassName>
-                  </systemPropertyVariables>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
       <!--
        Use a fork of the jdk orb.
        This profile builds on the jts-idlj profile and adds the openjdk orb classes to the bootclasspath
