@@ -245,103 +245,6 @@
         </plugins>
       </build>
     </profile>
-    <profile>
-      <id>jts-idlj</id>
-      <activation>
-        <property>
-          <name>!idlj-disabled</name>
-        </property>
-      </activation>
-      
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl</artifactId>
-          <version>${project.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl-tests</artifactId>
-          <version>${project.version}</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-      
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>idlj-compile</id>
-                <goals>
-                  <goal>compile</goal>
-                </goals>
-                <configuration>
-                  <excludes>
-                    <exclude>**/jacorb/**</exclude>
-                    <exclude>**/ibmorb/**</exclude>
-                  </excludes>
-                </configuration>
-              </execution>
-              <execution>
-                <id>idlj-testCompile</id>
-                <goals>
-                  <goal>testCompile</goal>
-                </goals>
-                <configuration>
-                  <testExcludes>
-                    <exclude>**/PropertyInitTest.java</exclude>
-                    <exclude>**/PropertyInitTest3.java</exclude>
-                  </testExcludes>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>surefire-idlj</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true</argLine>
-                  <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
-                  <systemProperties combine.children="append" />
-                  <excludes>
-                    <exclude>**/common/**</exclude>
-                    <exclude>**/initialisation/postinit/**</exclude>
-                    <exclude>**/initialisation/postset/**</exclude>
-                    <exclude>**/initialisation/preinit/**</exclude>
-                    <exclude>**/initialisation/TestAttributeCallback.java</exclude>
-                    <exclude>**/SimpleObjectImpl.java</exclude>
-                    <exclude>**/TestAttributeCallback.java</exclude>
-                    <exclude>**/PropertyInitTest.java</exclude>
-                    <exclude>**/PropertyInitTest3.java</exclude>
-                  </excludes>
-                  <classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
-                  </classpathDependencyExcludes>
-                  <systemPropertyVariables
-                    combine.children="append">
-                    <OrbPortabilityEnvironmentBean.orbImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.orb.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.orbImpleClassName>
-                    <OrbPortabilityEnvironmentBean.poaImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.oa.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.poaImpleClassName>
-                    <OrbPortabilityEnvironmentBean.orbDataClassName>com.arjuna.orbportability.internal.orbspecific.versions.javaidl_1_4</OrbPortabilityEnvironmentBean.orbDataClassName>
-                  </systemPropertyVariables>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
 
     <profile>
       <id>jts-openjdk</id>
@@ -377,7 +280,7 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <executions>
               <execution>
-                <id>idlj-compile</id>
+                <id>idlj-openjdk-compile</id>
                 <goals>
                   <goal>compile</goal>
                 </goals>
@@ -389,7 +292,7 @@
                 </configuration>
               </execution>
               <execution>
-                <id>idlj-testCompile</id>
+                <id>idlj-openjdk-testCompile</id>
                 <goals>
                   <goal>testCompile</goal>
                 </goals>
